--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
-    "gulp": "3.9.1",
+    "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.1",
     "gulp-babel": "8.0.0",
     "gulp-bower": "0.0.15",
     "gulp-coffee": "3.0.3",
     "gulp-concat": "2.6.1",
     "gulp-cssnano": "2.1.3",
-    "gulp-help": "1.6.1",
+    "gulp-help-doc": "1.1.1",
     "gulp-if": "3.0.0",
     "gulp-less": "4.0.1",
     "gulp-load-plugins": "2.0.2",
     "gulp-plumber": "1.2.1",
-    "gulp-sequence": "1.0.0",
     "gulp-size": "3.0.0",
     "gulp-sourcemaps": "2.6.5",
     "gulp-start": "1.0.1",
